plugin/devil/lib/devil/DevIL/bindings/delphi/openil.pas


// ImageLib Functions
function ilActiveImage(Number: TILuint): TILboolean; stdcall;
  external OPENILDLL;
function ilActiveLayer(Number: TILuint): TILboolean; stdcall;
  external OPENILDLL;
function ilActiveMipmap(Number: TILuint): TILboolean; stdcall;
  external OPENILDLL;
function ilApplyPal(FileName: PChar): TILboolean; stdcall; external OPENILDLL;
function ilApplyProfile(InProfile, OutProfile: PChar): TILboolean; stdcall; external OPENILDLL;
procedure ilBindImage(Image: TILuint); stdcall; external
  OPENILDLL;
function ilBlit(Src: TILuint; DestX, DestY, DestZ: TILint; SrcX, SrcY, SrcZ, Width, Height, Depth: TILuint): TILboolean; stdcall; external OPENILDLL;
procedure ilClearColour(Red, Green, Blue, Alpha: TILclampf); stdcall; external OPENILDLL;
procedure ilClearColor(Red, Green, Blue, Alpha: TILclampf); stdcall; external OPENILDLL name 'ilClearColour';
function ilClearImage: TILboolean; stdcall; external OPENILDLL;
function ilCloneCurImage: TILuint; stdcall; external OPENILDLL;
function ilCompressFunc(Mode: TILenum): TILboolean; stdcall; external OPENILDLL;
function ilConvertImage(DestFormat, DestType: TILenum): TILboolean; stdcall; external
  OPENILDLL;
function ilConvertPal(DestFormat: TILenum): TILboolean; stdcall; external
  OPENILDLL;
function ilCopyImage(Src: TILuint): TILboolean; stdcall; external OPENILDLL;
procedure ilCopyPixels(XOff, YOff, ZOff, Width, Height, Depth: TILuint;
  Format, _Type: TILenum; Data: Pointer); stdcall; external OPENILDLL;
procedure ilCreateSubImage(SubType: TILenum; Num: TILuint); stdcall; external OPENILDLL;
procedure ilDefaultImage; stdcall; external OPENILDLL;
procedure ilDeleteImages(Num: TILsizei; const Images: PILuint); stdcall;
  external OPENILDLL;
function ilDisable(Mode: TILenum): TILboolean; stdcall; external OPENILDLL;
function ilEnable(Mode: TILenum): TILboolean; stdcall; external OPENILDLL;
function ilFormatFunc(Mode: TILenum): TILboolean; stdcall; external OPENILDLL;
procedure ilGenImages(Num: TILsizei; Images: PILuint); stdcall; external
  OPENILDLL;
function ilGetAlpha(_Type: TILenum): PILubyte; stdcall; external OPENILDLL;
function ilGetBoolean(Mode: TILenum): TILboolean; stdcall; external OPENILDLL;
procedure ilGetBooleanv(Mode: TILenum; Param: PILboolean); stdcall; external
  OPENILDLL;
function ilGetData: PILubyte; stdcall; external OPENILDLL;
function ilGetDXTCData(Buffer: PILubyte; BufferSize: TILuint; DXTCFormat: TILenum):
  TILuint; stdcall; external OPENILDLL;
function ilGetError: TILenum; stdcall; external OPENILDLL;
function ilGetInteger(Mode: TILenum): TILint; stdcall; external OPENILDLL;
procedure ilGetIntegerv(Mode: TILenum; Param: PILint); stdcall; external
  OPENILDLL;
function ilGetLumpPos: TILuint; stdcall; external OPENILDLL;
function ilGetPalette: PILubyte; stdcall; external OPENILDLL;
function ilGetString(StringName: TILenum): PChar; stdcall; external OPENILDLL;
procedure ilHint(Target, Mode: TILenum); stdcall; external OPENILDLL;
procedure ilInit; stdcall; external OPENILDLL;
function ilIsDisabled(Mode: TILenum): TILboolean; stdcall; external OPENILDLL;
function ilIsEnabled(Mode: TILenum): TILboolean; stdcall; external OPENILDLL;
function ilIsImage(Image: TILuint): TILboolean; stdcall; external OPENILDLL;
function ilIsValid(_Type: TILenum; FileName: PChar): TILboolean; stdcall;
  external OPENILDLL;
function ilIsValidF(_Type: TILenum; _File: TILHandle): TILboolean; stdcall;
  external OPENILDLL;
function ilIsValidL(_Type: TILenum; Lump: Pointer; Size: TILuint): TILboolean;
  stdcall; external OPENILDLL;
procedure ilKeyColor(Red: TILubyte; Green: TILubyte; Blue: TILubyte; PalNum: TILubyte);
  stdcall; external OPENILDLL name 'ilKeyColour';
procedure ilKeyColour(Red: TILubyte; Green: TILubyte; Blue: TILubyte; PalNum: TILubyte);
  stdcall; external OPENILDLL;
function ilLoad(_Type: TILenum; FileName: PChar): TILboolean; stdcall;
  external OPENILDLL;
function ilLoadF(_Type: TILenum; _File: TILHandle): TILboolean; stdcall;
  external OPENILDLL;
function ilLoadImage(FileName: PChar): TILboolean; stdcall; external OPENILDLL;
function ilLoadL(_Type: TILenum; Lump: Pointer; Size: TILuint): TILboolean; stdcall;
  external OPENILDLL;
function ilLoadPal(FileName: PChar): TILboolean; stdcall; external OPENILDLL;
function ilOriginFunc(Mode: TILenum): TILboolean; stdcall; external OPENILDLL;
function ilOverlayImage(Src: TILuint; XCoord, YCoord, ZCoord: TILint):
  TILboolean; stdcall; external OPENILDLL;
procedure ilPopAttrib; stdcall; external OPENILDLL;
procedure ilPushAttrib(Bits: TILuint); stdcall; external OPENILDLL;
procedure ilRegisterFormat(Format: TILenum); stdcall; external OPENILDLL;
function ilRegisterLoad(Ext: PChar; Load: TIL_LOADPROC): TILboolean; stdcall;
  external OPENILDLL;
function ilRegisterMipNum(Num: TILuint): TILboolean; stdcall; external OPENILDLL;
function ilRegisterNumImages(Num: TILuint): TILboolean;  stdcall;
  external OPENILDLL;
procedure ilRegisterOrigin(Origin: TILenum); stdcall; external OPENILDLL;
procedure ilRegisterPal(Pal: Pointer; Size: TILuint; _Type: TILenum); stdcall;
  external OPENILDLL;
function ilRegisterSave(Ext: PChar; Save: TIL_SAVEPROC): TILboolean; stdcall;
  external OPENILDLL;
procedure ilRegisterType(_Type: TILenum); stdcall; external OPENILDLL;
function ilRemoveLoad(Ext: PChar): TILboolean; stdcall; external OPENILDLL;
function ilRemoveSave(Ext: PChar): TILboolean; stdcall; external OPENILDLL;
procedure ilResetRead; stdcall; external OPENILDLL;
procedure ilResetWrite; stdcall; external OPENILDLL;
function ilSave(_Type: TILenum; FileName: PChar): TILboolean; stdcall;
  external OPENILDLL;
function ilSaveF(_Type: TILenum; _File: TILHandle): TILboolean; stdcall;
  external OPENILDLL;
function ilSaveImage(FileName: PChar): TILboolean; stdcall; external OPENILDLL;
function ilSaveL(_Type: TILenum; Lump: Pointer; Size: TILuint): TILboolean;
  stdcall; external OPENILDLL;
function ilSavePal(FileName: PChar): TILboolean; stdcall; external
  OPENILDLL;
function ilSetData(Data: Pointer): TILboolean; stdcall; external OPENILDLL;
function ilSetDuration(Duration: TILuint): TILboolean; stdcall;
  external OPENILDLL;
procedure ilSetInteger(Mode: TILenum; Param: TILint); stdcall; external OPENILDLL;
procedure ilSetPixels(XOff, YOff, ZOff, Width, Height, Depth: TILuint;
  Format, _Type: TILenum; Data: Pointer); stdcall; external OPENILDLL;
procedure ilSetRead(Open: TfOpenRProc; Close: TfCloseRProc;
  Eof: TfEofProc; Getc: TfGetcProc; Read: TfReadProc; Seek: TfSeekRProc;
  Tell: TfTellRProc); stdcall; external OPENILDLL;
procedure ilSetString(Mode: TILenum; Param: PChar); stdcall; external OPENILDLL; 
procedure ilSetWrite(Open: TfOpenWProc; Close: TfCloseWProc;
  Putc: TfPutcProc; Seek: TfSeekWProc;
  Tell: TfTellWProc; Write: TfWriteProc); stdcall; external OPENILDLL;
function ilTexImage(Width, Height, Depth: TILuint; Bpp: TILubyte; Format, _Type:
  TILenum; Data: Pointer): TILboolean; stdcall; external OPENILDLL;
function ilTypeFunc(Mode: TILenum): TILboolean; stdcall; external OPENILDLL;
function ilLoadData(FileName: PChar; Width, Height, Depth: TILuint;
  Bpp: TILubyte): TILboolean; stdcall; external OPENILDLL;
function ilLoadDataF(_File: TILHandle; Width, Height, Depth: TILuint;
  Bpp: TILubyte): TILboolean; stdcall; external OPENILDLL;
function ilLoadDataL(Lump: Pointer; Size: TILuint; Width, Height, Depth: TILuint;
  Bpp: TILubyte): TILboolean; stdcall; external OPENILDLL;
function ilSaveData(FileName: PChar): TILboolean; stdcall; external OPENILDLL;

implementation

end.

